add wildcard processing and check for EMPTY_RESULTS instead of null